change to full_skip plugin

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -38,7 +38,7 @@ roles_path    = ./roles
 #host_key_checking = False
 
 # change the default callback
-stdout_callback = skippy
+stdout_callback = full_skip
 # enable additional callbacks
 #callback_whitelist = timer, mail
 
@@ -125,7 +125,7 @@ stdout_callback = skippy
 
 # set plugin path directories here, separate with colons
 #action_plugins     = /usr/share/ansible/plugins/action
-callback_plugins   = ./plugins/callback
+#callback_plugins   = /usr/share/ansible/plugins/callback 
 #connection_plugins = /usr/share/ansible/plugins/connection
 #lookup_plugins     = /usr/share/ansible/plugins/lookup
 #vars_plugins       = /usr/share/ansible/plugins/vars
