--- a/roles/installdocker/tasks/main.yml
+++ b/roles/installdocker/tasks/main.yml
@@ -28,7 +28,7 @@
 
 # Distrospecific. Only disto.
 # ansible_distribution_version specific things should be handled down the line
-- include: "{{role_path}}/tasks/distributions/{{ansible_distribution}}.yml"
+- include_tasks: "{{role_path}}/tasks/distributions/{{ansible_distribution}}.yml"
 
 
 # General postinstall
