--- a/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
+++ b/roles/galaxy-docker/tasks/backups/cronbackupdb.yml
@@ -61,5 +61,5 @@
   with_dict: "{{ galaxy_docker_backup_database_cron_jobs }}"
 
 # Sets up a rsync script to automatically synchronize the backups to a remote host.
-- include: rsync.yml
+- include_tasks: rsync.yml
   when: galaxy_docker_backup_rsync_remote_host
