--- a/roles/galaxy-docker/tasks/start_container/main.yml
+++ b/roles/galaxy-docker/tasks/start_container/main.yml
@@ -9,8 +9,8 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-- include: run.yml
+- include_tasks: run.yml
   when: galaxy_docker_run
 
-- include: install_python_dependencies.yml
+- include_tasks: install_python_dependencies.yml
   when: galaxy_docker_template_ldap
