--- a/roles/galaxy-docker/tasks/upgrade/upgrade.yml
+++ b/roles/galaxy-docker/tasks/upgrade/upgrade.yml
@@ -16,7 +16,7 @@
     keep_volumes: True
 
 - name: moving to another export folder for testing
-  include: test.yml
+  include_tasks: test.yml
   when: galaxy_docker_test_upgrade
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_web_user}}"
@@ -68,7 +68,7 @@
     name: "{{galaxy_docker_container_name}}"
     state: stopped
 
-- include: add_new_config.yml
+- include_tasks: add_new_config.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_web_user}}"
   vars:
