--- a/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
@@ -17,16 +17,16 @@
   retries: 10
   delay: 15
 
-- include_tasks: template_ldap.yml
+- import_tasks: template_ldap.yml
   when: galaxy_docker_template_ldap
 
-- include_tasks: galaxywelcome.yml
+- import_tasks: galaxywelcome.yml
   when: galaxy_docker_template_welcome
 
-- include_tasks: setup_cluster_general.yml
+- import_tasks: setup_cluster_general.yml
   when: galaxy_docker_cluster | bool
 
-- include_tasks: setupsge.yml
+- import_tasks: setupsge.yml
   when: galaxy_docker_cluster == 'sge'
 
-- include_tasks: report_user.yml
+- import_tasks: report_user.yml
