--- a/roles/galaxy-docker/tasks/prepare_docker/main.yml
+++ b/roles/galaxy-docker/tasks/prepare_docker/main.yml
@@ -1,14 +1,14 @@
-- include_tasks: change_uids.yml
+- import_tasks: change_uids.yml
   when: galaxy_docker_change_uids
 
-- include_tasks: customimage.yml
+- import_tasks: customimage.yml
   when: (galaxy_docker_custom_image or galaxy_docker_change_uids)
 
-- include_tasks: create_export_folder.yml
+- import_tasks: create_export_folder.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_web_user}}"
   vars:
     ansible_user: "{{galaxy_docker_web_ssh_user}}"
     ansible_ssh_private_key_file: "{{galaxy_docker_web_user_private_key}}"
 
-- include_tasks: create_export_directory_folders.yml
+- import_tasks: create_export_directory_folders.yml
