--- a/roles/galaxy-docker/tasks/provision/import/import.yml
+++ b/roles/galaxy-docker/tasks/provision/import/import.yml
@@ -9,14 +9,14 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-- include_tasks: transfer_database.yml
+- import_tasks: transfer_database.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_web_user}}"
   vars:
     ansible_user: "{{galaxy_docker_web_ssh_user}}"
     ansible_ssh_private_key_file: "{{galaxy_docker_web_user_private_key}}"
 
-- include_tasks: create_empty_db_script.yml
+- import_tasks: create_empty_db_script.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_database_user}}"
   vars:
@@ -72,14 +72,14 @@
     name: "{{galaxy_docker_container_name}}"
     state: stopped
 
-- include_tasks: delete_database_file.yml
+- import_tasks: delete_database_file.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_web_user}}"
   vars:
     ansible_user: "{{galaxy_docker_web_ssh_user}}"
     ansible_ssh_private_key_file: "{{galaxy_docker_web_user_private_key}}"
 
-- include_tasks: delete_empty_db_script.yml
+- import_tasks: delete_empty_db_script.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_database_user}}"
   vars:
@@ -94,4 +94,4 @@
   set_fact:
     galaxy_docker_upgrade: True
 - name: Include upgrade procedure
-  include_tasks: ../upgrade/main.yml
+  import_tasks: ../upgrade/main.yml
