--- a/roles/galaxy-docker/tasks/upgrade/test.yml
+++ b/roles/galaxy-docker/tasks/upgrade/test.yml
@@ -44,7 +44,7 @@
     - src: "galaxy-central/config"
       dest: "galaxy-central"
 
-- include_tasks: copy_database.yml
+- import_tasks: copy_database.yml
   become: "{{galaxy_docker_become}}"
   become_user: "{{galaxy_docker_database_user}}"
   vars:
