--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -101,7 +101,21 @@ galaxy_docker_delete_backup_files: False
 galaxy_docker_cluster_registered_user_concurrent_jobs: 2
 galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
 galaxy_docker_cluster_embed_metadata_in_job: True
-#galaxy_docker_cluster_environment_variables: {}
+galaxy_docker_cluster_environment_variables: {}
+galaxy_docker_cluster_default_destination: cluster_low
+galaxy_docker_cluster_destinations:
+  cluster_low:
+    cpu_count: 1
+    memory: 4G
+  cluster_low_high_mem:
+    cpu_count: 1
+    memory: 16G
+  cluster_med:
+    cpu_count: 2
+    memory: 8G
+  cluster_high:
+    cpu_count: 8
+    memory: 32G
 
 # defaults for databases
 
