--- a/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/main.yml
@@ -24,9 +24,9 @@
   when: galaxy_docker_template_welcome
 
 - include: setup_cluster_general.yml
-  when: galaxy_docker_cluster | bool
+  when: galaxy_docker_cluster_type | bool
 
 - include: setupsge.yml
-  when: galaxy_docker_cluster == 'sge'
+  when: galaxy_docker_cluster_type == 'sge'
 
 - include: report_user.yml
