add directive for installing tool_destinations template

--- a/roles/galaxy-docker/tasks/template_galaxy_settings/setup_cluster_general.yml
+++ b/roles/galaxy-docker/tasks/template_galaxy_settings/setup_cluster_general.yml
@@ -53,6 +53,12 @@
     src: "job_conf.xml.j2"
     force: yes
 
+- name: Create tool_destinations.yml
+  template:
+    dest: "{{galaxy_docker_export_location}}/galaxy-central/config/tool_destinations.yml"
+    src: "tool_destinations.yml.j2"
+    force: yes
+
 - name: Edit shed_tool_conf.xml to contain the right tool shed location
   lineinfile:
     backrefs: yes
