fix templating issues

--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -103,7 +103,7 @@ galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
 galaxy_docker_cluster_embed_metadata_in_job: True
 galaxy_docker_cluster_environment_variables: {}
 galaxy_docker_cluster_default_destination: cluster_low
-galaxy_docker_cluster_sge_parallel_environment: threads
+galaxy_docker_cluster_sge_parallel_environment: make
 galaxy_docker_cluster_sge_extra_options: ""
 galaxy_docker_cluster_destinations:
   cluster_low:
@@ -117,7 +117,7 @@ galaxy_docker_cluster_destinations:
 galaxy_docker_cluster_tool_destinations:
   cluster_low: []
   cluster_low_high_mem: []
-galaxy_docker_cluster_tool_destination_configuration: omit
+galaxy_docker_cluster_tool_destination_configuration: {}
 galaxy_docker_cluster_user_destinations:
   admin@galaxy.org:
     priority: med
