--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -102,25 +102,17 @@ galaxy_docker_cluster_registered_user_concurrent_jobs: 2
 galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
 galaxy_docker_cluster_embed_metadata_in_job: True
 galaxy_docker_cluster_environment_variables: {}
-galaxy_docker_cluster_default_destination: cluster_low
+galaxy_docker_cluster_default_destination: cluster
 galaxy_docker_cluster_sge_parallel_environment: make
 galaxy_docker_cluster_sge_extra_options: ""
 galaxy_docker_cluster_destinations:
-  cluster_low:
+  cluster:
     cpu_count: 1
     memory: 4G
     extra_options: ""
-  cluster_low_high_mem:
-    cpu_count: 1
-    memory: 16G
-    extra_options: ""
-galaxy_docker_cluster_tool_destinations:
-  cluster_low: []
-  cluster_low_high_mem: []
+galaxy_docker_cluster_tool_destinations: {}
 galaxy_docker_cluster_tool_destination_configuration: {}
-galaxy_docker_cluster_user_destinations:
-  admin@galaxy.org:
-    priority: med
+galaxy_docker_cluster_user_destinations: {}
 # defaults for databases
 
 ## Defaults are to use custom format. Which is compressed and uses pg_restore to recover.
