--- a/host_vars/cluster_example_host/cluster.settings
+++ b/host_vars/cluster_example_host/cluster.settings
@@ -6,13 +6,12 @@ galaxy_docker_cluster_environment_variables:
   LC_ALL: "en_US.UTF-8"
 galaxy_docker_shared_cluster_directory: "/exports/galaxy"
 
+# Set the number of concurrent jobs for registered and unregistered users.
 galaxy_docker_cluster_registered_user_concurrent_jobs: 2
 galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
-galaxy_docker_cluster_embed_metadata_in_job: True
-galaxy_docker_cluster_environment_variables: {}
-galaxy_docker_cluster_default_destination: cluster_low
-galaxy_docker_cluster_sge_parallel_environment: make
-galaxy_docker_cluster_sge_extra_options: ""
+
+# Set up your cluster destinations. By default galaxy will request only one core and 4 GB memory on the cluster.
+# Here you can set which options are available to galaxy
 galaxy_docker_cluster_destinations:
   cluster_low:
     cpu_count: 1
@@ -22,13 +21,52 @@ galaxy_docker_cluster_destinations:
     cpu_count: 1
     memory: 16G
     extra_options: ""
-galaxy_docker_cluster_tool_destinations:
-  cluster_low: []
-  cluster_low_high_mem: []
-galaxy_docker_cluster_tool_destination_configuration: ''
-galaxy_docker_cluster_user_destinations:
-  admin@galaxy.org:
-    priority: med
+
+# Set the default destination. All tools will run with this destination.
+galaxy_docker_cluster_default_destination: cluster_low
+
+# Simple tool configuration. You can specify a list of tools for each destination.
+# Galaxy will default to that destination for specified tools.
+#galaxy_docker_cluster_tool_destinations:
+#  cluster_low:
+#    - Filter1
+#    - ucsc_table_direct1
+#  cluster_low_high_mem:
+#    - ChangeCase
+
+# Advanced tool configuration for the dynamic job runner.
+# This will be pasted in the tools section of tool_destinations.yml
+# It may conflict with the simple configuration if you specify the same tools here.
+# This option is introduced to allow for more fine-grained control.
+# https://github.com/galaxyproject/galaxy/blob/dev/config/tool_destinations.yml.sample
+#galaxy_docker_cluster_tool_destination_configuration:
+#  trimmer:
+#    rules:
+#      - rule_type: file_size
+#        nice_value: 0
+#        lower_bound: 0
+#        upper_bound: 512 KB
+#        destination: local
+#      - rule_type: file_size
+#        nice_value: 0
+#        lower_bound: 4 MB
+#        upper_bound: infinity
+#        destination: cluster_low_high_mem
+
+
+#SGE specific settings
+
+galaxy_docker_cluster_sge_parallel_environment: make
+
+# Extra options that will be passed to qsub
+galaxy_docker_cluster_sge_extra_options: ""
+
+# You can give users priorities This will be pasted in the user section of tool_destinations.yml
+# https://github.com/galaxyproject/galaxy/blob/dev/config/tool_destinations.yml.sample
+
+#galaxy_docker_cluster_user_destinations:
+#  admin@galaxy.org:
+#    priority: med
 
 # User settings
 
