--- a/roles/galaxy-docker/defaults/main.yml
+++ b/roles/galaxy-docker/defaults/main.yml
@@ -98,6 +98,7 @@ galaxy_docker_delete_test_upgrade: False
 galaxy_docker_delete_backup_files: False
 
 # Cluster defaults
+galaxy_docker_cluster_type: sge
 galaxy_docker_cluster_registered_user_concurrent_jobs: 2
 galaxy_docker_cluster_anonymous_user_concurrent_jobs: 1
 galaxy_docker_cluster_embed_metadata_in_job: True
