--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ git:
 install:
   - pip install mkdocs yamllint
 script:
-  - project_yamls=$(git ls-files | grep  -e ".*.ya?ml")
-  - project_setting_files=$(git ls-files | grep  -e ".*.settings")
+  - project_yamls=$(git ls-files | grep  -E ".*\.ya?ml")
+  - project_setting_files=$(git ls-files | grep  -E ".*\.settings$")
   - yamllint -c .yamllint.yml $project_yamls
   - yamllint -c .yamllint.yml $project_setting_files
   - mkdocs build --clean
