--- a/test/group_vars/test/files.settings
+++ b/test/group_vars/test/files.settings
@@ -6,3 +6,4 @@ galaxy_docker_welcome_dir: "{{playbook_dir}}/test/files/test/welcome/"
 galaxy_docker_genomes_dir: "{{playbook_dir}}/test/files/test/genomes/"
 galaxy_docker_dbkeys_list_dir: "{{playbook_dir}}/test/files/test/dbkeys/"
 galaxy_docker_extract_database_dir: "test/files/{{inventory_hostname}}/database_extract/"
+galaxy_docker_custom_image_dir: "{{playbook_dir}}/test/files/cluster-test/docker_custom_image/"
