--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,8 @@ git:
 install:
   - pip install mkdocs yamllint
 script:
-  - project_yamls=$(git ls-files | grep  -E ".*\.ya?ml$")
-  - project_setting_files=$(git ls-files | grep  -E ".*\.settings$")
-  - yamllint -f parsable -c .yamllint.yml $project_yamls
-  - yamllint -f parsable -c .yamllint.yml $project_setting_files
-  - mkdocs build -s --clean
+  - bash test/yamllinting.sh
+  - bash test/mkdocs.sh
 
 # Keep inboxes nice and clean.
 notifications:
