--- a/test/docker/ubuntu-16.04/Dockerfile
+++ b/test/docker/ubuntu-16.04/Dockerfile
@@ -1,6 +1,8 @@
 # Adapted from https://docs.docker.com/engine/examples/running_ssh_service/
 FROM ubuntu:16.04
 
+ENV SSH_USER=galaxy_ssh
+
 RUN apt-get update && apt-get install -y openssh-server python
 RUN mkdir /var/run/sshd
 RUN echo 'root:screencast' | chpasswd
@@ -11,6 +13,22 @@ RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so
 
 ENV NOTVISIBLE "in users profile"
 RUN echo "export VISIBLE=now" >> /etc/profile
+
+# Add passwordless sudo user.
+RUN useradd -d /home/$SSH_USER -m -p $SSH_USER -G sudo,passwordless -s /bin/bash $SSH_USER
+RUN echo '%passwordless         ALL = (ALL) NOPASSWD: ALL' >> /etc/sudoers
+
+USER $SSH_USER
+RUN mkdir $HOME/.ssh
+RUN chmod 700 $HOME/.ssh
+ADD files/galaxy_ssh.pub $HOME/galaxy_ssh.pub
+RUN cat $HOME/galaxy_ssh.pub >> .ssh/authorized_keys
+RUN chmod 600 $HOME/.ssh/authorized_keys
+
+
+
+
+USER root
 
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
