lint test launched from tox env

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,13 @@
 skipsdist = True
 envlist = py27, py27-lint
 
+[testenv]
+whitelist_externals = bash
+
 [testenv:py27-lint]
 deps =
     mkdocs
     yamllint
-commands = bash test/yamllinting.sh, bash test/mkdocs.sh
+commands =
+    bash test/yamllinting.sh
+    bash test/mkdocs.sh
