--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = py27, py27-lint
+envlist = playbook, py27-lint
 
 [testenv]
 whitelist_externals = bash
@@ -12,3 +12,10 @@ deps =
 commands =
     bash test/yamllinting.sh
     bash test/mkdocs.sh
+
+[testenv:playbook]
+deps =
+    ansible==2.3.0
+commands =
+    ansible-galaxy install -r requirements.yml
+    bash test/test_playbook.sh {env:test_hostname} {env:privileged}
