--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
       env:
         TOX_ENV: playbook
         test_hostname: ubuntu-16.04
-        privileged: True
+        privileged: False
 
 # Submodules required for integration testing with vagrant only, which is not supported by travis.
 git:
