Revert "add option to use different localhost for testing purposes"
This reverts commit a2f7e5ad99b83bd0d378f2cfa415d3b52a14c907.

--- a/roles/galaxy-docker/handlers/main.yml
+++ b/roles/galaxy-docker/handlers/main.yml
@@ -20,7 +20,7 @@
 
 - name: check if galaxy has started
   uri:
-    url: "http://{{galaxy_docker_localhost}}:{{galaxy_docker_web_port}}"
+    url: "http://localhost:{{galaxy_docker_web_port}}"
     return_content: yes
   register: result
   until: 'galaxy_brand in result.content'
@@ -29,7 +29,7 @@
 
 - name: check if provision galaxy has started
   uri:
-    url: "http://{{galaxy_docker_localhost}}:{{galaxy_docker_provision_port}}"
+    url: "http://localhost:{{galaxy_docker_provision_port}}"
     return_content: yes
   register: result
   until: 'galaxy_brand in result.content'
