change remote temp in ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,7 +13,7 @@
 
 inventory      = ./hosts
 #library        = /usr/share/my_modules/
-#remote_tmp     = $HOME/.ansible/tmp
+remote_tmp     = /tmp/.ansible
 #forks          = 5
 #poll_interval  = 15
 sudo_user      = root
