--- a/ansible.cfg
+++ b/ansible.cfg
@@ -13,8 +13,8 @@
 
 inventory      = ./hosts
 #library        = /usr/share/my_modules/
-remote_tmp     = /tmp/$USER/.ansible
-local_tmp     = /tmp/$USER/.ansible
+remote_tmp     = /tmp/.ansible
+local_tmp     = /tmp/.ansible
 #forks          = 5
 #poll_interval  = 15
 sudo_user      = root
