tox environment should pass travis ENV variables

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps =
 commands =
     bash test/yamllinting.sh
     bash test/mkdocs.sh
-
+passenv = CI TRAVIS USER HOME
 [testenv:playbook]
 deps =
     ansible==2.3.0
