debugging echo added

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = playbook, py27-lint
 
 [testenv]
 whitelist_externals = bash
-passenv = CI TRAVIS USER HOME
+passenv = CI TRAVIS USER HOME TRAVIS*
 
 [testenv:py27-lint]
 deps =
@@ -18,5 +18,6 @@ commands =
 deps =
     ansible==2.3.0
 commands =
+    echo "\$TRAVIS: $TRAVIS"
     ansible-galaxy install -r requirements.yml
     bash test/test_playbook.sh {env:test_hostname} {env:privileged}
