--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ skipsdist = True
 envlist = playbook, py27-lint
 
 [testenv]
-whitelist_externals = bash
+whitelist_externals = bash echo
 passenv = CI TRAVIS USER HOME TRAVIS*
 
 [testenv:py27-lint]
